# Face-and-Skin-Detection

./: CMakeLists.txt  README.txt
src/: AdaptiveSkinDetector.cpp  AdaptiveSkinDetector.hpp  FaceDetection.cpp  FaceDetection.hpp  GetAllBodySkinRatios.cpp  GetAllBodySkinRatios.hpp  Histogram.cpp  Histogram.hpp  MyLib.cpp  MyLib.hpp  OpenCVCommon.hpp  ParseJson.cpp  ParseJson.hpp  Test.cpp  Test.hpp  main.cpp
test/: 10.json
